<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".CustomerFragment">

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		style="@style/TitleText"
		android:text="@string/title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/view"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginTop="16dp"
		android:background="@android:color/darker_gray"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:src="@drawable/survey_icon"
		app:layout_constraintEnd_toStartOf="@+id/textView3"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		style="@style/MainText"
		android:text="@string/grade_title"
		app:layout_constraintBottom_toBottomOf="@+id/imageView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/imageView"
		app:layout_constraintTop_toTopOf="@+id/imageView" />

	<RadioGroup
		android:id="@+id/score_group"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView">

		<RadioButton
			android:id="@+id/zero"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="0" />

		<RadioButton
			android:id="@+id/one"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="1" />

		<RadioButton
			android:id="@+id/two"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="2" />

		<RadioButton
			android:id="@+id/three"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="3" />

		<RadioButton
			android:id="@+id/four"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="4" />

		<RadioButton
			android:id="@+id/five"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="5" />

		<RadioButton
			android:id="@+id/six"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="6" />

		<RadioButton
			android:id="@+id/seven"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="7" />

		<RadioButton
			android:id="@+id/eight"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="8" />

		<RadioButton
			android:id="@+id/nine"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="9" />

		<RadioButton
			android:id="@+id/ten"
			style="@style/RadioWithTextOnTop"
			android:layout_width="@dimen/radio_size"
			android:layout_height="wrap_content"
			android:text="10" />
	</RadioGroup>

	<View
		android:id="@+id/view2"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginTop="16dp"
		android:background="@android:color/darker_gray"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView6" />

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:src="@drawable/question_icon"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/view2" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		style="@style/MainText"
		android:text="@string/comment_title"
		app:layout_constraintBottom_toBottomOf="@+id/imageView2"
		app:layout_constraintStart_toEndOf="@+id/imageView2"
		app:layout_constraintTop_toTopOf="@+id/imageView2" />

	<EditText
		android:id="@+id/comment_field"
		android:layout_width="0dp"
		android:layout_height="100dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:ems="10"
		android:background="@null"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView2" />

	<Button
		android:id="@+id/submit_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/submit"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/comment_field" />

	<TextView
		android:id="@+id/textView6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/no_recommend"
		android:textSize="11sp"
		android:maxWidth="100dp"
		android:textAlignment="viewStart"
		android:textColor="@color/red"
		app:layout_constraintStart_toStartOf="@+id/score_group"
		app:layout_constraintTop_toBottomOf="@+id/score_group" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:text="@string/neutral"
		android:textSize="11sp"
		app:layout_constraintBottom_toBottomOf="@+id/textView6"
		app:layout_constraintEnd_toStartOf="@+id/textView8"
		app:layout_constraintStart_toEndOf="@+id/textView6"
		app:layout_constraintTop_toTopOf="@+id/textView6" />

	<TextView
		android:id="@+id/textView8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/surely_recommend"
		android:textSize="11sp"
		android:maxWidth="100dp"
		android:textColor="@color/green"
		android:textAlignment="viewEnd"
		app:layout_constraintBottom_toBottomOf="@+id/textView6"
		app:layout_constraintEnd_toEndOf="@+id/score_group"
		app:layout_constraintTop_toTopOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>