<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ManagerFragment">


	<TextView
		android:id="@+id/textView5"
		style="@style/TitleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/feedback_statistics"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/imageView6"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:src="@drawable/nps"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView5" />

	<RadioGroup
		android:id="@+id/toggleGroup"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView6">

		<RadioButton
			android:id="@+id/critics_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/critics" />

		<RadioButton
			android:id="@+id/neutrals_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/neutrals" />

		<RadioButton
			android:id="@+id/promoter_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/promoters" />

		<RadioButton
			android:id="@+id/all_btn"
			android:checked="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/all" />

	</RadioGroup>

	<TextView
		android:id="@+id/textView14"
		style="@style/TitleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:text="@string/critics"
		android:textColor="@color/red"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />

	<TextView
		android:id="@+id/textView15"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=" - "
		style="@style/TitleText"
		android:textColor="@color/red"
		app:layout_constraintBottom_toBottomOf="@+id/textView14"
		app:layout_constraintStart_toEndOf="@+id/textView14" />

	<TextView
		android:id="@+id/critics_number"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/TitleText"
		android:text="0"
		android:textColor="@color/red"
		app:layout_constraintBottom_toBottomOf="@+id/textView14"
		app:layout_constraintStart_toEndOf="@+id/textView15" />

	<TextView
		android:id="@+id/textView19"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:text="@string/neutrals"
		style="@style/TitleText"
		android:textColor="@android:color/darker_gray"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView14" />

	<TextView
		android:id="@+id/textView18"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=" - "
		style="@style/TitleText"
		android:textColor="@android:color/darker_gray"
		app:layout_constraintBottom_toBottomOf="@+id/textView19"
		app:layout_constraintStart_toEndOf="@+id/textView19" />

	<TextView
		android:id="@+id/neutrals_number"
		style="@style/TitleText"
		android:text="0"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@android:color/darker_gray"
		app:layout_constraintBottom_toBottomOf="@+id/textView19"
		app:layout_constraintStart_toEndOf="@+id/textView18" />

	<TextView
		android:id="@+id/textView20"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:text="@string/promoters"
		style="@style/TitleText"
		android:textColor="@color/green"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView19" />

	<TextView
		android:id="@+id/textView21"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=" - "
		style="@style/TitleText"
		android:textColor="@color/green"
		app:layout_constraintBottom_toBottomOf="@+id/textView20"
		app:layout_constraintStart_toEndOf="@+id/textView20" />

	<TextView
		android:id="@+id/promoters_number"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/TitleText"
		android:text="0"
		android:textColor="@color/green"
		app:layout_constraintBottom_toBottomOf="@+id/textView20"
		app:layout_constraintStart_toEndOf="@+id/textView21" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="194dp" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/comments_rv"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline2"
		app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />

	<TextView
		android:id="@+id/textView22"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		style="@style/TitleText"
		android:text="@string/average_score"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView20" />

	<TextView
		android:id="@+id/textView23"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=" - "
		style="@style/TitleText"
		app:layout_constraintBottom_toBottomOf="@+id/textView22"
		app:layout_constraintStart_toEndOf="@+id/textView22" />

	<TextView
		android:id="@+id/average_score"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/TitleText"
		android:text="0"
		app:layout_constraintBottom_toBottomOf="@+id/textView22"
		app:layout_constraintStart_toEndOf="@+id/textView23" />

</androidx.constraintlayout.widget.ConstraintLayout>